# RynnMotion

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOCKER-QUICKSTART.md  Dockerfile  LICENSE  Makefile.docker  README.md  docker-compose.yml  toolchain_aarch64.cmake
cmake/: FindMuJoCo.cmake  GenerateRobotTypes.cmake  RobotMotionConfig.cmake  RynnMotionConfig.cmake.in
common/: __init__.py
common/data/: camera.hpp  com_feedback.hpp  data_base.hpp  fsm.hpp  ft_sensor.hpp  gripper.hpp  image_buffer.hpp  imu.hpp  jacobian.hpp  motor.hpp  pose.hpp  rigid_body_state.hpp  runtime_data.hpp  timer.hpp
common/lcm/lcmMotion/: lcm_record.hpp
common/lcm/lcmMotion/lcm_types/: lcm_record.lcm  robot_observation.lcm
common/lcm/piperlcm/: JointState.hpp  Time.hpp
common/lcm/piperlcm/lcm_types/: JointState.lcm  Time.lcm
config/: motion.yaml  mujoco.yaml  robot.yaml
docs/: ARCHITECTURE.md  DOCKER-SETUP.md  OPEN_SOURCE_ROADMAP.md  README.md  c++_coding_style.md  core-satellite-architecture.md  how_to_add_new_robot_scene.md  how_to_record_datasets_c++.md  installation.md
models/: check_all_frames.py  debug_frames.py  discovery.hpp
models/1.low_dof/01.onelink/assets/: base.STL  link1.STL  link1_1kg.STL  link1_2kg.STL
models/1.low_dof/01.onelink/mjcf/: onelink_robot.xml
models/1.low_dof/01.onelink/scene/: scene.xml  scene2.xml
models/1.low_dof/01.onelink/urdf/: oneLink.urdf
models/1.low_dof/02.twolink/assets/: base.STL  link1.STL  link2.STL
models/1.low_dof/02.twolink/mjcf/: twolink_robot.xml
models/1.low_dof/02.twolink/scene/: scene.xml
models/1.low_dof/02.twolink/urdf/: twolink.urdf
models/2.end_effector/10.elephant/assets/: gripper_base_link.STL  gripper_l_link_1.STL  gripper_l_link_2.STL  gripper_l_link_3.STL  gripper_r_link_1.STL  gripper_r_link_2.STL  gripper_r_link_3.STL
models/environments/: Camera.stl  color.xml  cube.xml  frame.xml  ground.xml  highstage_camera.stl  mug_assets.xml  mug_body.xml
models/environments/human/: arm.stl  body.stl  head.stl  human_body.stl  neck.stl
motion/: CMakeLists.txt
motion/fsm/include/: pickplace_fsm.hpp  tinyfsm.hpp
motion/fsm/src/: motion_fsm.cpp  pickplace_fsm.cpp
motion/interface/: interface_base.cpp
motion/manager/: CMakeLists.txt  debug_config.cpp  debug_config.hpp  mjcf_parser.cpp  robot_manager.cpp
motion/module/: module_base.cpp
motion/module/estimation/: estimator.cpp
motion/module/joint/: fr3_jointmove.cpp  joint_move.cpp  joint_move.hpp
motion/module/osc/: osc.cpp  osc.hpp
motion/module/planner/: pickplace_controller.cpp  pickplace_controller.hpp  planner.cpp  planner.hpp
motion/module/teleopfollow/: fr3_teleopfollow.cpp  fr3_teleopfollow.hpp  teleop_follow.cpp  teleop_follow.hpp
motion/runtime/: fsm_manager.cpp  module_manager.cpp  scene_manager.cpp  timing_manager.cpp  timing_manager.hpp
motion/utils/: CMakeLists.txt
motion/utils/curve/: bezierCurve.hpp  bspline.cpp  curveBase.hpp  fifthCurve.hpp  fifthSpline.cpp
motion/utils/dynamics/: dyn_pin.cpp
motion/utils/generator/: signal_generator.cpp  signal_generator.hpp
motion/utils/kinematics/: diff_ik.cpp  kine_pin.cpp  kine_pin.hpp
motion/utils/logger/: lcm_logger.cpp
motion/utils/tools/: filter.cpp  filter.hpp  interpolate.hpp  math_tools.cpp
motion/utils/trajectory/: trajgen.cpp  trajgen.hpp
mujoco/: CMakeLists.txt  readme.md
mujoco/include/: mj_actuator.hpp  mj_hdf5_writer.hpp  mj_interface.hpp  mj_recorder.hpp  mj_scene.hpp  mj_sensor.hpp  mj_ui.hpp  mj_video_encoder.hpp  ros_mj_interface.hpp
mujoco/src/: main_mj.cpp  mj_actuator.cpp  mj_hdf5_writer.cpp  mj_interface.cpp  mj_recorder.cpp  mj_scene.cpp  mj_sensor.cpp  mj_ui.cpp  mj_video_encoder.cpp  ros_main_mj.cpp  ros_mj_interface.cpp
python/: .gitignore  pyproject.toml  setup_env.sh
python/config/: config_fr3.yaml  config_so101.yaml
python/examples/: lekiwi.py  robot_jointui.py
python/scripts/: motion_sim_robot.py  robot_state_monitor.py
python/src/RynnMotion/: __init__.py
python/src/RynnMotion/RynnDatasets/: backward_compatibility.py  constants.py  keyboard_events.py  rynn_dataset.py  types.py  utils.py  video_utils.py
python/src/RynnMotion/algorithms/: __init__.py  diff_ik.py  osc.py  pin_kine.py  pose_mapper.py
python/src/RynnMotion/common/: __init__.py  communicator_base.py  lcm_communiactor.py  mock_communiactor.py
python/src/RynnMotion/common/data/: basic_data.py  robot_command.py  robot_state.py
python/src/RynnMotion/common/lcm/lcmMotion/: __init__.py  lcm_record.hpp  robot_observation.py
python/src/RynnMotion/core/: __init__.py  mjrobot_interface.py  robotinterface_base.py
python/src/RynnMotion/manager/: __init__.py  mjcf_parser.py  robot_manager.py
python/src/RynnMotion/teleop/: __init__.py  ee_hto.py  joint_hto.py  leader_reader.py
python/src/RynnMotion/trajgen/: __init__.py  sim_motion.py  tg_ruckig.py  trajgen_base.py
python/src/RynnMotion/trajgen/interpolate/: rt_trajgen.py
python/src/RynnMotion/utils/: data_monitor.py  interpolator_plotter.py  joint_plotter.py  lcm_handler.py  path_config.py  policy_interpolator.py  pyFSM.py  robot_state_publisher.py
python/tools/: README.md  check_frames.py  compute_transform.py  debug_frames.py
scripts/: docker-build.sh  docker-exec.sh  docker-run.sh  setup_dependencies.sh  upgrade_mujoco.sh
tutorials/: quickstart.md
unittest/: CMakeLists.txt  unittest_readme.md
unittest/fsm/: CMakeLists.txt  motiontick_test.cpp  pickplace_test.cpp  simpletick_test.cpp
unittest/fsm/include/: test_fsm.hpp
unittest/fsm/src/: test_fsm.cpp
unittest/kinematics/: CMakeLists.txt  README.md  build.sh  pin_mj.cpp  pin_mj.hpp  pin_mj_main.cpp
unittest/kinematics/pinkine_mj/: CMakeLists.txt  build.sh  fix_mujoco_mac.sh  pin_mj.cpp  pin_mj.hpp  pinmj_main.cpp  pinmj_multimain.cpp
unittest/manager/: CMakeLists.txt  test_discovery.cpp  test_module_defaults.cpp
unittest/trajectory/: CMakeLists.txt  test_ee.cpp  test_joint.cpp
unittest/utility/: CMakeLists.txt  bezierPlanner.cpp  bezierPlanner.hpp  bezierTest.cpp
(+188 files in other folders)
